docs(README): 更新环境变量配置文档
- 修改 README.md 中的运行版本说明，增加 .env 和 .env.sqlitedb 配置文件的使用
- 更新环境变量配置文档，分别增加 MySQL 和 SQLite 数据库的配置示例
- 调整命令行运行指令，简化为 npm run serve

--- a/doc/环境变量配置.md
+++ b/doc/环境变量配置.md
@@ -6,6 +6,8 @@
 
 ## MySQL
 
+> .env
+
 ```
 # 地址
 BASE_URL=https://www.766187397.dpdns.org
@@ -51,15 +53,17 @@ EMAIL_HOST=smtp.qq.com
 EMAIL_PORT=465
 # 使用SSL
 EMAIL_SECURE=true
-# SMTP用户名
-EMAIL_USER=766187397@qq.com
+# SMTP用户名（邮箱）
+EMAIL_USER=
 # SMTP密码
-EMAIL_PASS=zolkzbawjigzbcha
+EMAIL_PASS=
 ```
 
 
 
 ## Sqlite
+
+> .env.sqlitedb
 
 ```
 # 地址
@@ -87,7 +91,7 @@ EMAIL_HOST=smtp.qq.com
 EMAIL_PORT=465
 # 使用SSL
 EMAIL_SECURE=true
-# SMTP用户名
+# SMTP用户名（邮箱）
 EMAIL_USER=
 # SMTP密码
 EMAIL_PASS=
