docs(database): 更新数据库配置文档
- 修改 MySQL 数据库配置说明
- 修改 SQLite 数据库配置说明
- 优化文档格式和可读性

--- a/doc/环境变量配置.md
+++ b/doc/环境变量配置.md
@@ -6,7 +6,7 @@
 
 ## MySQL
 
-> .env
+> 使用MySQL数据库
 
 ```
 # 地址
@@ -63,7 +63,7 @@ EMAIL_PASS=
 
 ## Sqlite
 
-> .env.sqlitedb
+> 使用sqlitedb数据库
 
 ```
 # 地址
